# py-beward

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  CONTRIBUTING.md  LICENSE.md  README.md  deploy.bat  deploy.sh  dev-setup.sh  dist.bat  dist.sh  pylintrc  pyproject.toml  requirements-dev.txt  requirements-test-pre-commit.txt  requirements-test.txt  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature_request.md  feature_request.yml  issue.md  new_device.md  new_device.yml
.github/workflows/: build.yml  codeql-analysis.yml  py-dead-code.yml  py-test.yml  pypi-publish.yml  release.yml
beward/: __init__.py  camera.py  const.py  core.py  doorbell.py  util.py
blueprint_client/: client.py  const.py
script/: setup
scripts/: gen_releasenotes  release  setup
tests/: __init__.py  conftest.py  const.py  test__init.py  test_camera.py  test_client.py  test_core.py  test_doorbell.py  test_util.py
tests/fixtures/: alarmchangestate.txt  controller.txt  rtsp.txt  systeminfo.txt  test_data.json
