[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beward"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
description = "Beward Client"
readme = "README.md"
authors = [
    { name = 'Andrey "Limych" Khrolenok', email = "andrey@khrolenok.ru" },
]
license = { file = "LICENSE.md" }
keywords = ["beward"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    #
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Security",
    "Topic :: Multimedia :: Video :: Capture",
    #
    # Pick your license as you wish (see also "license" above)
    "License :: Other/Proprietary License",
    #
    # Specify the Python versions you support here.
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/Limych/py-beward"
Documentation = "https://github.com/Limych/py-beward/README.md"
Issues = "https://github.com/Limych/py-beward/issues"
"New Device" = "https://github.com/Limych/py-beward/issues/new?template=new_device.yml"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
    "FIX002", # TODO provide context for future work
    "PLR2044", # Line with empty comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN001", "ANN201", "ARG001", "PLR2004", "S101", "S311", "SLF001"]
